changing auth module from module to commom
