# api/src/routes/UserRoutes.js
@@ -1,6 +1,6 @@
 
 const exress = require ("express")
-const  tokenValited  = require("../middleware/auth")
+const  {tokenValited}  = require("../middleware/auth")
 const UserController = require ("../controllers/UserController.js")
 
 const routes = exress.Router()
@@ -9,6 +9,7 @@ routes
     .get("/users", tokenValited, UserController.listUsers)
     .get("/users/typeUser", UserController.listUserTypeUser)
     .get("/users/:id", UserController.findOneUserById)
+    .get("/users/username/:username", UserController.findUserByUsername)
     .get("/users/:id/typeUser", UserController.findOneUserById)
     .post("/users", UserController.insertUsers)
     .put("/users/:id", UserController.updateUser)
